k8s/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-poc
  namespace: devsecops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-api-poc
  template:
    metadata:
      labels:
        app: node-api-poc
    spec:
      automountServiceAccountToken: false
      serviceAccountName: node-api-poc
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: node-api-poc
          image: node-api-poc:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: db-credentials
              mountPath: /var/run/secrets/db
              readOnly: true
            - name: tmp
              mountPath: /tmp

          resources:
            requests:
              cpu: 100m
              memory: 96Mi
            limits:
              cpu: 300m
              memory: 192Mi

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

      volumes:
        - name: db-credentials
          secret:
            secretName: node-api-poc-db-credentials
            defaultMode: 0400
        - name: tmp
          emptyDir: {}
