k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-api-poc
  namespace: devsecops
spec:
  selector:
    app: node-api-poc
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
